# HELMDB-HASH

./: .gitignore  CMakeLists.txt  Jenkinsfile
src/gausskernel/storage/nvmdb/src/common/TurboHash/: CMakeLists.txt  buildall.sh  config_cpu_performance_mode.sh  config_pmem.sh  destroy_pmem.sh
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/: readme.txt
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/all_loadfactor/: all_loadfactor.dash  analysis_plot.sh  plot.py
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/gc/: analysis_plot.sh  gc.data  load01  plot.py  raw.data
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/load_latency/: analysis_plot.sh  load_latency.cceh  load_latency.cceh30  load_latency.clevel30  load_latency.clht30  load_latency.dash  load_latency.turbo  load_latency.turbo30  plot.py
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/motivation/: analysis_plot.sh  motivation_dram.csv  motivation_dram.data  motivation_dram_bw.csv  motivation_pmem.csv  motivation_pmem.data  motivation_pmem_bw.csv  plot.py
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/probe_log_len/: analysis_plot.sh  probe.py  probe16.data  probe2.data  probe32.data  probe4.data  probe64.data  probe8.data  probe_dis.py  probe_dis2.py  probe_dis_heatmap.py  probe_dis_parse.sh
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/read_latency/: analysis_plot.sh  plot.py  read_latency.cceh  read_latency.cceh30  read_latency.clevel30  read_latency.clht30  read_latency.dash  read_latency.turbo  read_latency.turbo30
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/rehashlat/: analysis_plot.sh  plot.py  rehashlat1024  rehashlat128  rehashlat16  rehashlat2048  rehashlat256  rehashlat2_1024  rehashlat2_128  rehashlat2_16  rehashlat2_2048  rehashlat2_256  rehashlat2_32  rehashlat2_4096  rehashlat2_512  rehashlat2_64  rehashlat2_8192  rehashlat32  rehashlat4096  rehashlat512  rehashlat64  rehashlat8192
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/repeat_delete/: delete_repeat_0_50per.data.parse  delete_repeat_0_60per.data.parse  delete_repeat_0_70per.data.parse  delete_repeat_0_80per.data.parse  delete_repeat_1_10per.data.parse  delete_repeat_1_20per.data.parse  delete_repeat_1_30per.data.parse  delete_repeat_1_40per.data.parse  delete_repeat_1_50per.data.parse  delete_repeat_1_60per.data.parse  delete_repeat_1_70per.data.parse  delete_repeat_1_80per.data.parse  parse.sh  plot.py
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/scalability/: analysis_plot.sh  plot.py  thread.cceh30_1  thread.cceh30_2  thread.cceh30_20  thread.cceh30_24  thread.cceh30_28  thread.cceh30_32  thread.cceh30_36  thread.cceh30_4  thread.cceh30_40  thread.cceh30_8  thread.cceh_1  thread.cceh_2  thread.cceh_20  thread.cceh_24  thread.cceh_28  thread.cceh_32  thread.cceh_36  thread.cceh_4  thread.cceh_40  thread.cceh_8  thread.clevel30_1  thread.clevel30_16  thread.clevel30_2  thread.clevel30_20  thread.clevel30_24  thread.clevel30_28  thread.clevel30_32  thread.clevel30_36  thread.clevel30_4  thread.clevel30_40  thread.clevel30_8  thread.clht30_1  thread.clht30_2  thread.clht30_20  thread.clht30_24  thread.clht30_28  thread.clht30_32  thread.clht30_36  (+35 more)
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/scalability_delete/: analysis_plot.sh  plot.py  thread_delete.clevel30_1  thread_delete.clevel30_16  thread_delete.clevel30_2  thread_delete.clevel30_20  thread_delete.clevel30_24  thread_delete.clevel30_28  thread_delete.clevel30_32  thread_delete.clevel30_36  thread_delete.clevel30_4  thread_delete.clevel30_40  thread_delete.clevel30_8  thread_delete.clht30_1  thread_delete.clht30_16  thread_delete.clht30_2  thread_delete.clht30_20  thread_delete.clht30_24  thread_delete.clht30_28  thread_delete.clht30_32  thread_delete.clht30_36  thread_delete.clht30_4  thread_delete.clht30_40  thread_delete.clht30_8  thread_delete.dash_1  thread_delete.dash_16  thread_delete.dash_2  thread_delete.dash_20  thread_delete.dash_24  thread_delete.dash_28  thread_delete.dash_32  thread_delete.dash_36  thread_delete.dash_4  thread_delete.dash_40  thread_delete.dash_8  thread_delete.turbo30_1  thread_delete.turbo30_16  thread_delete.turbo30_2  thread_delete.turbo30_20  thread_delete.turbo30_24  (+17 more)
src/gausskernel/storage/nvmdb/src/common/TurboHash/data/scalability_update/: analysis_plot.sh  plot.py  thread_update.cceh30_1  thread_update.cceh30_16  thread_update.cceh30_2  thread_update.cceh30_20  thread_update.cceh30_24  thread_update.cceh30_28  thread_update.cceh30_32  thread_update.cceh30_36  thread_update.cceh30_4  thread_update.cceh30_40  thread_update.cceh30_8  thread_update.cceh_1  thread_update.cceh_16  thread_update.cceh_2  (+63 more)
src/gausskernel/storage/nvmdb/src/common/TurboHash/release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/gausskernel/storage/nvmdb/src/common/TurboHash/src/: CMakeLists.txt
src/gausskernel/storage/nvmdb/src/common/TurboHash/testbench/: .gitmodules  ipm_load.txt  ipm_readrandom.txt  ipm_ycsba.txt  ipm_ycsbb.txt  ipm_ycsbc.txt  ipm_ycsbd.txt  ipm_ycsbf.txt  load.data  load.sh  matrix_all.sh  motivation.py  motivation.sh  recover_test.sh  run.sh  testbench_rehashlat.sh  testbench_repeat_delete.sh  testbench_scalability.sh  testbench_scalability_update.sh  testbench_ycsb.sh  ycsb.cceh  ycsb.cceh30  ycsb.clevel30  ycsb.clht30  ycsb.turbo  ycsb.turbo30
src/gausskernel/storage/nvmdb/ycsb_test/: CMakeLists.txt  ycsb.cpp
src/gausskernel/storage/nvmdb/ycsb_test/index-microbench/: gen_workload.py  generate_all_workloads.sh  workload_config.inp
src/gausskernel/storage/nvmdb/ycsb_test/index-microbench/workload_spec/: workloada  workloadb  workloadc  workloadd  workloade  workloadf
(+659 files in other folders)
